--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fatmas-crochet-corner",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^10.8.1",
+    "framer-motion": "^11.0.8",
     "lucide-react": "^0.363.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
